--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@privy-io/react-auth": "^1.59.5",
+    "@privy-io/wagmi": "^0.2.2",
+    "@tanstack/react-query": "^5.28.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "viem": "^2.8.18",
+    "wagmi": "^2.5.12"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
