--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@privy-io/react-auth": "^1.59.5",
+		"@privy-io/react-auth": "1.59.6-beta-20240322214908",
     "@privy-io/wagmi": "^0.2.2",
     "@tanstack/react-query": "^5.28.6",
     "react": "^18.2.0",
