--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-		"@privy-io/react-auth": "1.59.6-beta-20240322214908",
+    "@privy-io/react-auth": "1.59.6-beta-20240322214908",
     "@privy-io/wagmi": "^0.2.2",
     "@tanstack/react-query": "^5.28.6",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "viem": "^2.8.18",
     "wagmi": "^2.5.12"
   },
