--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@livepeer/react": "^2.5.8",
     "@privy-io/react-auth": "1.59.6-beta-20240322214908",
     "@privy-io/wagmi": "^0.2.2",
     "@tanstack/react-query": "^5.28.6",
