--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "viem": "^2.8.18",
+    "vite-plugin-node-polyfills": "^0.21.0",
     "wagmi": "^2.5.12"
   },
   "devDependencies": {
